feat(chore) : use official docling jar for integration (#383)
* feat(chore) : use official docling jar for integration

* removes unnecessary file

* Fix pre-merge checks in PR #383

---------

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>